--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -12,3 +12,18 @@ None because we started the project today
 ## Any impediments or stumbling blocks?
 
 None
+
+# Jiaming Lu
+
+## What have you done since yesterday?
+None because we started the project today
+
+## What are you planning on doing today?
+
+- setup Firebase, add everyone to the project
+- setup Jira, add everyone to the project
+- setup GitHub repo, add everyone to the project
+
+## Any impediments or stumbling blocks?
+
+None
