--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -20,9 +20,9 @@ None because we started the project today
 
 ## What are you planning on doing today?
 
-- setup Firebase, add everyone to the project
-- setup Jira, add everyone to the project
-- setup GitHub repo, add everyone to the project
+- review lab 6 
+- learn basics about using android studio to collecting and managing data from 
+  user input
 
 ## Any impediments or stumbling blocks?
 
