--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -27,3 +27,15 @@ None because we started the project today
 ## Any impediments or stumbling blocks?
 
 None
+
+# Hansen Lin
+
+## What have you done since yesterday?
+None because we started the project today
+
+## What are you planning on doing today?
+Join Firebase project and Jira project
+Clone repo from Github
+
+## Any impediments or stumbling blocks?
+None
