--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -39,3 +39,15 @@ Clone repo from Github
 
 ## Any impediments or stumbling blocks?
 None
+
+# In Kim
+
+## What have you done since yesterday?
+None because we started the project today
+
+## What are you planning on doing today?
+-Review over Git version control and Android Studio
+-Review project instructions
+
+## Any impediments or stumbling blocks?
+None
