--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -46,8 +46,7 @@ None
 None because we started the project today
 
 ## What are you planning on doing today?
-Review over Git version control and Android Studio
-Review project instructions
+Review Git version control and Android Studio, project instructions
 
 ## Any impediments or stumbling blocks?
 None
