--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -26,6 +26,8 @@ None because we started the project today
 
 ## Any impediments or stumbling blocks?
 
+- implemented login activity (test unfinished)
+
 None
 
 # Hansen Lin
