--- a/docs/standups/11-16.md
+++ b/docs/standups/11-16.md
@@ -21,7 +21,11 @@ None
 
 ## What have you done since yesterday?
 
+- implemented login activity (test unfinished)
+- 
 ## What are you planning on doing today?
+
+- None for b07, since the upcoming tt for b36
 
 ## Any impediments or stumbling blocks?
 
