--- a/docs/standups/11-16.md
+++ b/docs/standups/11-16.md
@@ -44,8 +44,10 @@ None
 # In Kim
 
 ## What have you done since yesterday?
+- Working on creating Course class (Work in progress)
 
 ## What are you planning on doing today?
+- None for b07 since there is a TT2 for b36
 
 ## Any impediments or stumbling blocks?
 
