--- a/docs/standups/11-16.md
+++ b/docs/standups/11-16.md
@@ -34,9 +34,9 @@ None
 # Hansen Lin
 
 ## What have you done since yesterday?
-
+None. Preparing for B36 term test.
 ## What are you planning on doing today?
-
+None. Prepareing for B36 term test.
 ## Any impediments or stumbling blocks?
 
 None
