--- a/docs/standups/11-16.md
+++ b/docs/standups/11-16.md
@@ -34,7 +34,7 @@ None
 # Hansen Lin
 
 ## What have you done since yesterday?
-None. Preparing for B36 term test.
+Assigned to the task "Generating timeline"
 ## What are you planning on doing today?
 None. Prepareing for B36 term test.
 ## Any impediments or stumbling blocks?
