--- a/docs/standups/11-17.md
+++ b/docs/standups/11-17.md
@@ -20,7 +20,9 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  None. Preparing for B36 term test.
 - What are you planning on doing today?
+  None.
 - Any impediments or stumbling blocks?
   - None
 
