--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -52,3 +52,16 @@ Review Git version control and Android Studio, project instructions
 
 ## Any impediments or stumbling blocks?
 None
+
+# Leon Lee
+
+## What have you done since yesterday?
+- Finalized design for the login page
+
+## What are you planning on doing today?
+
+- set up the templates of the other screens on Figma to continue designing tomorrow
+
+## Any impediments or stumbling blocks?
+
+None
