--- a/docs/standups/11-17.md
+++ b/docs/standups/11-17.md
@@ -13,9 +13,11 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
+    - None
 - What are you planning on doing today?
+    - implements the login function for user class
 - Any impediments or stumbling blocks?
-  - None
+  - None and frustrating with implementations
 
 **Hansen Lin**
 
