--- a/docs/standups/11-16.md
+++ b/docs/standups/11-16.md
@@ -56,9 +56,10 @@ None
 # Leon Lee
 
 ## What have you done since yesterday?
+- doing some more Figma review
+- did some work on designing other screen
 
 ## What are you planning on doing today?
-
+continuing to finish Figma designs, hopefully ready by the end of this week
 ## Any impediments or stumbling blocks?
-
 None
