--- a/docs/standups/11-17.md
+++ b/docs/standups/11-17.md
@@ -34,6 +34,8 @@
 
 **Leon Lee**
 - What have you done since yesterday?
+  -Brushing up on more Figma tutorials and continued to work on designs
 - What are you planning on doing today?
+  - None
 - Any impediments or stumbling blocks?
   - None
