--- a/docs/standups/11-17.md
+++ b/docs/standups/11-17.md
@@ -13,9 +13,11 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
-- What are you planning on doing today?
-- Any impediments or stumbling blocks?
   - None
+- What are you planning on doing today?
+  - Implement login method in user class
+- Any impediments or stumbling blocks?
+  - None and frustrating with firebase :(
 
 **Hansen Lin**
 
