--- a/docs/standups/11-17.md
+++ b/docs/standups/11-17.md
@@ -30,7 +30,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - None. Preparing for B36 term test.
 - What are you planning on doing today?
+  - None.
 - Any impediments or stumbling blocks?
   - None
 
