--- a/docs/standups/11-18.md
+++ b/docs/standups/11-18.md
@@ -30,6 +30,8 @@
 
 **Leon Lee**
 - What have you done since yesterday?
+  - watched more Figma tutorials
 - What are you planning on doing during the weekend?
+  - finishing the UI design for the app
 - Any impediments or stumbling blocks?
   - None
