--- a/docs/standups/11-18.md
+++ b/docs/standups/11-18.md
@@ -18,7 +18,9 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - Finished the first version of generating timeline method.
 - What are you planning on doing during the weekend?
+  - Waiting for new task.
 - Any impediments or stumbling blocks?
   - None
 
