--- a/docs/standups/11-18.md
+++ b/docs/standups/11-18.md
@@ -26,7 +26,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  -  Nothing since I was studying for midterm today
 - What are you planning on doing during the weekend?
+  - Finish developing Course class and ask Yulong around for help and details
 - Any impediments or stumbling blocks?
   - None
 
