--- a/docs/standups/11-19.md
+++ b/docs/standups/11-19.md
@@ -21,7 +21,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Finished creating Course Class
 - What are you planning on doing today?
+  - Waiting for further instructions
 - Any impediments or stumbling blocks?
   - None
 
