doc(11-21) Yulong has more stuff to do

--- a/docs/standups/11-21.md
+++ b/docs/standups/11-21.md
@@ -5,7 +5,8 @@
   - refactor their code
 - What are you planning on doing today?
   - review their code one by one
-  - let them choose new tasks for the week
+  - find new tasks to do
+  - let them choose the new tasks for the week
 - Any impediments or stumbling blocks?
   - None
 
