--- a/docs/standups/11-20.md
+++ b/docs/standups/11-20.md
@@ -21,7 +21,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Nothing because of b52 midterm tmrw
 - What are you planning on doing today?
+  - Waiting for instructions
 - Any impediments or stumbling blocks?
   - None
 
