--- a/docs/standups/11-21.md
+++ b/docs/standups/11-21.md
@@ -26,7 +26,9 @@
 
 **In Kim**
 - What have you done during the weekend?
+  - Created Course class
 - What are you planning on doing today?
+  - Review with Yulong, instructions for second assignment
 - Any impediments or stumbling blocks?
   - None
 
