--- a/docs/standups/11-21.md
+++ b/docs/standups/11-21.md
@@ -34,6 +34,8 @@
 
 **Leon Lee**
 - What have you done during the weekend?
+  - finished creating all the UI for the app
 - What are you planning on doing today?
+  - watch more Android Studios tutorials, and meeting with the team tomorrow to implement the UI
 - Any impediments or stumbling blocks?
   - None
