--- a/docs/standups/11-22.md
+++ b/docs/standups/11-22.md
@@ -24,7 +24,10 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Code review with Jiaming, Yulong and Hansen
 - What are you planning on doing today?
+  - Attend tutorial 
+  - Researching / learning about updating UI from Firebase
 - Any impediments or stumbling blocks?
   - None
 
