--- a/docs/standups/11-23.md
+++ b/docs/standups/11-23.md
@@ -22,7 +22,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Started working on my assignment
 - What are you planning on doing today?
+  - Finishing my assignment
 - Any impediments or stumbling blocks?
   - None
 
