feat: signin of admin

--- a/docs/standups/11-15.md
+++ b/docs/standups/11-15.md
@@ -22,7 +22,7 @@ None because we started the project today
 
 - review lab 6 
 - learn basics about using android studio to collecting and managing data from 
-  user input
+  account input
 
 ## Any impediments or stumbling blocks?
 
