--- a/docs/standups/11-18.md
+++ b/docs/standups/11-18.md
@@ -13,7 +13,7 @@
 - What have you done since yesterday?
   - Trying to implement User class
 - What are you planning on doing during the weekend?
-  - Implement User class, enable user to login and sign up
+  - Implement User class, enable account to login and sign up
 - Any impediments or stumbling blocks?
   - None
 
