--- a/docs/standups/11-17.md
+++ b/docs/standups/11-17.md
@@ -15,7 +15,7 @@
 - What have you done since yesterday?
   - None
 - What are you planning on doing today?
-  - Implement login method in user class
+  - Implement login method in account class
 - Any impediments or stumbling blocks?
   - None and frustrating with firebase :(
 
