--- a/docs/standups/11-23.md
+++ b/docs/standups/11-23.md
@@ -30,6 +30,8 @@
 
 **Leon Lee**
 - What have you done since yesterday?
+  -None, too busy with other school work
 - What are you planning on doing today?
+  -further working on UI implementation
 - Any impediments or stumbling blocks?
   - None
