--- a/docs/standups/11-19.md
+++ b/docs/standups/11-19.md
@@ -8,7 +8,9 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
+  - None
 - What are you planning on doing today?
+  - None
 - Any impediments or stumbling blocks?
   - None
 
