--- a/docs/standups/11-21.md
+++ b/docs/standups/11-21.md
@@ -13,7 +13,9 @@
 **Jiaming Lu**
 
 - What have you done during the weekend?
+  - None
 - What are you planning on doing today?
+  - None
 - Any impediments or stumbling blocks?
   - None
 
