--- a/docs/standups/11-22.md
+++ b/docs/standups/11-22.md
@@ -11,7 +11,9 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
+  - met with group
 - What are you planning on doing today?
+  - view the revised code by Yulong
 - Any impediments or stumbling blocks?
   - None
 
