--- a/docs/standups/11-20.md
+++ b/docs/standups/11-20.md
@@ -8,9 +8,9 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
-  - None
+  - Implementing the main functionality of `User` class
 - What are you planning on doing today?
-  - None
+  - Finish the un-implemented feature of yeaterday's work
 - Any impediments or stumbling blocks?
   - None
 
