--- a/docs/standups/11-23.md
+++ b/docs/standups/11-23.md
@@ -9,7 +9,9 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
+  - Attending the tutorial and get new tasks from Yulong
 - What are you planning on doing today?
+  - review the revised code by Yulong
 - Any impediments or stumbling blocks?
   - None
 
