--- a/docs/standups/11-24.md
+++ b/docs/standups/11-24.md
@@ -9,9 +9,11 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
+  - Met with group and review the codes
 - What are you planning on doing today?
+  - refactor the code and implement the feature of each one
 - Any impediments or stumbling blocks?
-  - None
+  - Done all the features for `Student` and `Admin` class
 
 **Hansen Lin**
 
