--- a/docs/standups/11-24.md
+++ b/docs/standups/11-24.md
@@ -24,7 +24,7 @@
 
 **In Kim**
 - What have you done since yesterday?
-  - Started working on my assignment
+  - Working on UI component for User
 - What are you planning on doing today?
   - Finishing my assignment
 - Any impediments or stumbling blocks?
