--- a/docs/standups/11-25.md
+++ b/docs/standups/11-25.md
@@ -24,9 +24,9 @@
 
 **In Kim**
 - What have you done since yesterday?
-  - Started working on my assignment
+  - Finished working on UI Component
 - What are you planning on doing today?
-  - Finishing my assignment
+  - UI Component for List of Courses if I feel better
 - Any impediments or stumbling blocks?
   - None
 
