--- a/docs/standups/11-26.md
+++ b/docs/standups/11-26.md
@@ -21,7 +21,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Nothing because I was sick  
 - What are you planning on doing today?
+  - Creating Fragment that shows list of courses if I feel better
 - Any impediments or stumbling blocks?
   - None
 
