--- a/docs/standups/11-20.md
+++ b/docs/standups/11-20.md
@@ -17,9 +17,11 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - Wrote a method supporting generating timeline
 - What are you planning on doing today?
+  - Import course cases into database for testing
 - Any impediments or stumbling blocks?
-  - None
+  - The method
 
 **In Kim**
 - What have you done since yesterday?
