--- a/docs/standups/11-23.md
+++ b/docs/standups/11-23.md
@@ -18,7 +18,9 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - Imported course cases into database for testing
 - What are you planning on doing today?
+  - None
 - Any impediments or stumbling blocks?
   - None
 
