--- a/docs/standups/11-26.md
+++ b/docs/standups/11-26.md
@@ -15,9 +15,11 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - Worte the method that shows the generated timeline to student.
 - What are you planning on doing today?
-- Any impediments or stumbling blocks?
   - None
+- Any impediments or stumbling blocks?
+  - The method
 
 **In Kim**
 - What have you done since yesterday?
