--- a/docs/standups/11-27.md
+++ b/docs/standups/11-27.md
@@ -21,7 +21,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Started working on my assignment
 - What are you planning on doing today?
+  - Continue working on my assignment
 - Any impediments or stumbling blocks?
   - None
 
