--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="generate_timetable">GENERATE TIMETABLE</string>
     <string name="course_wishlist">COURSE WISHLIST</string>
     <string name="courses_taken">COURSES TAKEN</string>
+    <string name="course_planner">Course Planner</string>
+    <string name="university_of_toronto">University of Toronto</string>
+    <string name="log_in">LOG IN</string>
+    <string name="login_screen_page_for_the_app">Login screen page for the app</string>
+    <string name="uoft_school_logo">UofT School Logo</string>
 </resources>
