--- a/docs/standups/11-28.md
+++ b/docs/standups/11-28.md
@@ -34,6 +34,8 @@
 
 **Leon Lee**
 - What have you done during the weekend?
+  - pushed admin page onto github
 - What are you planning on doing today?
+  - started to work on the backend for the login page, and refactoring existing code to fit the MVP model
 - Any impediments or stumbling blocks?
   - None
