--- a/docs/standups/11-28.md
+++ b/docs/standups/11-28.md
@@ -28,7 +28,9 @@
 
 **In Kim**
 - What have you done during the weekend?
+  - Worked on my assignment
 - What are you planning on doing today?
+  - Continue working on my assignment
 - Any impediments or stumbling blocks?
   - None
 
