--- a/docs/standups/11-29.md
+++ b/docs/standups/11-29.md
@@ -31,6 +31,8 @@
 
 **Leon Lee**
 - What have you done since yesterday?
+  - started working on the UI for the "create courses page" in the admin fragment
 - What are you planning on doing today?
+  - meeting with the team to discuss where we're going and continue my work on the current fragment I've been assigned
 - Any impediments or stumbling blocks?
   - None
