--- a/docs/standups/11-29.md
+++ b/docs/standups/11-29.md
@@ -25,7 +25,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Fixed bugs and troubles with the branch and code
 - What are you planning on doing today?
+  - Checking for errors and working on assignment
 - Any impediments or stumbling blocks?
   - None
 
