--- a/docs/standups/11-30.md
+++ b/docs/standups/11-30.md
@@ -21,7 +21,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Worked on my first assignment
 - What are you planning on doing today?
+  - Do last check on first assignment, start second assignment
 - Any impediments or stumbling blocks?
   - None
 
