--- a/docs/standups/11-30.md
+++ b/docs/standups/11-30.md
@@ -1,7 +1,10 @@
 **Yulong Liu**
 
 - What have you done since yesterday?
+  - create AdminFragment
+  - show all courses in AdminFragmetn
 - What are you planning on doing today?
+  - pair programming with Leon
 - Any impediments or stumbling blocks?
   - None
 
