--- a/docs/standups/11-28.md
+++ b/docs/standups/11-28.md
@@ -22,7 +22,9 @@
 **Hansen Lin**
 
 - What have you done during the weekend?
+  - None
 - What are you planning on doing today?
+  - Add name for courses in firebase
 - Any impediments or stumbling blocks?
   - None
 
