--- a/docs/standups/11-29.md
+++ b/docs/standups/11-29.md
@@ -19,9 +19,11 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - Imported names for courses in firebase
 - What are you planning on doing today?
+  - Student add courses to taken list
 - Any impediments or stumbling blocks?
-  - None
+  - Creating spinner
 
 **In Kim**
 - What have you done since yesterday?
