--- a/docs/standups/11-30.md
+++ b/docs/standups/11-30.md
@@ -18,7 +18,9 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - Watched tutorials on Android Studio activity and view
 - What are you planning on doing today?
+  - Keep working on "add courses to taken list"
 - Any impediments or stumbling blocks?
   - None
 
