--- a/docs/standups/12-01.md
+++ b/docs/standups/12-01.md
@@ -27,6 +27,8 @@
 
 **Leon Lee**
 - What have you done since yesterday?
+  - started working the backend development for the "create_courses" fragment
 - What are you planning on doing today?
+  - I learned how to use checkboxes in Android studios and this allows me to let admin users select offering sessions for a course
 - Any impediments or stumbling blocks?
-  - None
+  - Implementing the checkboxes were a bit tricky
