--- a/docs/standups/12-02.md
+++ b/docs/standups/12-02.md
@@ -27,6 +27,8 @@
 
 **Leon Lee**
 - What have you done since yesterday?
+  - Continued my work on the checkboxes
 - What are you planning on doing today?
+  - Finished implementing checkboxes, and started thinking about how to implement the feature where the admin can specify which prerequistes a course should have
 - Any impediments or stumbling blocks?
   - None
