--- a/docs/standups/12-01.md
+++ b/docs/standups/12-01.md
@@ -21,7 +21,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Working on assignment
 - What are you planning on doing today?
+  - Working on assignment
 - Any impediments or stumbling blocks?
   - None
 
