--- a/docs/standups/12-02.md
+++ b/docs/standups/12-02.md
@@ -21,7 +21,9 @@
 
 **In Kim**
 - What have you done since yesterday?
+  - Continue working on the delete button on wishlist
 - What are you planning on doing today?
+  - Continue working on the delete button on wishlist
 - Any impediments or stumbling blocks?
   - None
 
