--- a/docs/standups/12-01.md
+++ b/docs/standups/12-01.md
@@ -15,7 +15,9 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - "Choose course for taken list", "Sorted taken list in ui"
 - What are you planning on doing today?
+  - None
 - Any impediments or stumbling blocks?
   - None
 
