--- a/docs/standups/12-02.md
+++ b/docs/standups/12-02.md
@@ -15,7 +15,9 @@
 **Hansen Lin**
 
 - What have you done since yesterday?
+  - None
 - What are you planning on doing today?
+  - Test the app
 - Any impediments or stumbling blocks?
   - None
 
