--- a/docs/standups/12-05.md
+++ b/docs/standups/12-05.md
@@ -30,7 +30,9 @@
 
 **In Kim**
 - What have you done during weekend?
+  - Made add and delete course buttons on wishlist and made a pull request
 - What are you planning on doing today?
+  - Checking for bugs
 - Any impediments or stumbling blocks?
   - None
 
