--- a/docs/standups/12-01.md
+++ b/docs/standups/12-01.md
@@ -8,9 +8,11 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
-- What are you planning on doing today?
-- Any impediments or stumbling blocks?
   - None
+- What are you planning on doing today?
+  - Implements `delete` and `add` button that allows user to add and remove course 
+- Any impediments or stumbling blocks?
+  - Implements `delete` and `add` button that allows user to add and remove course 
 
 **Hansen Lin**
 
