--- a/docs/standups/11-29.md
+++ b/docs/standups/11-29.md
@@ -12,7 +12,9 @@
 **Jiaming Lu**
 
 - What have you done since yesterday?
+  - None
 - What are you planning on doing today?
+  - Learn the basics about recyclerview
 - Any impediments or stumbling blocks?
   - None
 
